# websift

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.github/workflows/: build-test.yml  publish-pypi.yml
docs/: GUIDES.md  README.vi.md
services/browser/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/browser/browser_service/: __init__.py  app.py  config.py  main.py  policy.py  proxy.py  runtime.py
services/browser/tests/: test_app.py  test_integration.py  test_policy.py  test_proxy.py
tests/: conftest.py  test_async_client.py  test_auth.py  test_cache.py  test_cli.py  test_client.py  test_concurrency.py  test_content.py  test_disk_cache.py  test_doctor.py  test_domain_policy.py  test_html.py  test_http.py  test_logging_config.py  test_models.py  test_models_json.py  test_package.py  test_search_many.py  test_security.py  test_server.py  test_settings.py
tests/fetching/: test_browser_client.py  test_detector.py  test_orchestrator.py
tests/fixtures/html/: article.html  docs.html  malformed.html  nested_list.html  table.html
tests/providers/: test_base.py  test_brave.py  test_client_isolation.py  test_ddgs.py  test_ddgs_retry.py  test_exa.py  test_fallback.py  test_provider_fetch.py  test_provider_http.py  test_provider_http_get.py  test_registry.py  test_searxng.py  test_serper.py  test_tavily.py
web_search/: __init__.py  auth.py  client.py  concurrency.py  config.py  content.py  html.py  http.py  logging_config.py  models.py  provider_http.py  security.py  server.py  settings.py
web_search/providers/: __init__.py  base.py  brave.py  ddgs.py  errors.py  exa.py  fallback.py  registry.py  searxng.py  tavily.py
websift/: __init__.py  __main__.py  auth.py  cache.py  cli.py  client.py  concurrency.py  config.py  content.py  doctor.py  html.py  http.py  logging_config.py  models.py  provider_http.py  security.py  server.py  settings.py
websift/fetching/: __init__.py  backend.py  browser_client.py  detector.py  http.py  orchestrator.py
websift/providers/: __init__.py  base.py  brave.py  ddgs.py  errors.py  exa.py  fallback.py  registry.py  searxng.py  serper.py  tavily.py
