[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websift"
dynamic = ["version"]
description = "Self-hosted MCP server for web search (DuckDuckGo) + page fetching. No API key required for the default DDGS provider."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HuyPP03", email = "huypp03@users.noreply.github.com"},
]
keywords = ["mcp", "web-search", "duckduckgo", "ai-agent", "tool-use", "websift"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.9.0,<2",
    "ddgs>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "ruff",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
# HTTP search providers ship in the base package (stdlib urllib + package
# provider_http). Extras are install markers for docs/CI and reserved if a
# future provider needs an optional SDK. Empty lists are intentional.
searxng = []
brave = []
tavily = []
exa = []
# Convenience alias: all keyed/self-hosted HTTP providers.
providers = []

[project.scripts]
websift = "web_search.server:main"

[project.urls]
Homepage = "https://github.com/HuyPP03/websift"
Repository = "https://github.com/HuyPP03/websift"
Issues = "https://github.com/HuyPP03/websift/issues"
Changelog = "https://github.com/HuyPP03/websift/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["web_search*"]

[tool.setuptools.dynamic]
version = {attr = "web_search.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-q",
    "-m",
    "not live and not provider",
    "--strict-markers",
]
markers = [
    "live: tests that call real external networks (DDGS/public sites)",
    "provider: provider-specific contract or live tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["web_search"]
omit = [
    "web_search/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
