[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websift-browser-service"
version = "0.1.0"
description = "Isolated Camoufox rendering service for WebSift"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "camoufox[geoip]>=0.4.11,<1",
  "playwright>=1.49,<2",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[project.scripts]
websift-browser = "browser_service.main:main"

[tool.setuptools.packages.find]
include = ["browser_service*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires an installed Camoufox browser and network access"]
addopts = "-q -m 'not integration'"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
